@@ -12,6 +12,7 @@ Version 2.1 (Batasu) August-2021:
 	* Script Manager [0.1.17] - added weeman script! ready for test 
 	* Script Manager [0.1.19] - added hakkuframework! not ready for test!
 	* Script Manager [0.1.21] - added aircrack-ng! ready for test!
+	* Script Manager [0.1.22] - hakku framework ready for test
 	
 Version 2.0 (Batasu) July-2021:
 	* Separated script function from main script
